--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="public/stylesheet/style.css">
 </head>
 <body>
-	<h1>MUSICAL  <span> </span>  KEYBOARD</h1>
+	<h1><u>MUSICAL  <span> </span>  KEYBOARD</u></h1>
 <div class="keys">
 	<div class="key" data-key="65"><kbd>A</kbd><span class="sound"></span></div>
 	<div class="key" data-key="66"><kbd>B</kbd><span class="sound"></span></div>
