--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
 	<title>MUSICALKEYBOARD</title>
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
 	<link rel="stylesheet" type="text/css" href="public/stylesheet/style.css">
 </head>
 <body>
-	<h1><u>MUSICAL  <span> </span>  KEYBOARD</u></h1>
+	<h1 style="word-spacing:40px"><u>MUSICAL KEYBOARD</u></h1>
 <div class="keys">
 	<div class="key" data-key="65"><kbd>A</kbd><span class="sound"></span></div>
 	<div class="key" data-key="66"><kbd>B</kbd><span class="sound"></span></div>
