--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="public/stylesheet/style.css">
 </head>
 <body>
-	<h1 style="word-spacing:40px"><u>MUSICAL KEYBOARD</u></h1>
+	<div class="header">
+		<h1 style="word-spacing:40px"><u>MUSICAL KEYBOARD</u></h1>
+	</div>
 <div class="keys">
 	<div class="key" data-key="65"><kbd>A</kbd><span class="sound"></span></div>
 	<div class="key" data-key="66"><kbd>B</kbd><span class="sound"></span></div>
@@ -51,7 +53,7 @@
 	<audio src="public/sound/sound(12).mp3" data-key="76"></audio>
 	<audio src="public/sound/sound(13).mp3" data-key="77"></audio>
 	<audio src="public/sound/sound(14).mp3" data-key="78"></audio>
-	<audio src="public/sound/sound(15).mp3" data-key="79"></audio>
+	<audio src="public/sound/sound(16).mp3" data-key="79"></audio>
 	<audio src="public/sound/sound(16).mp3" data-key="80"></audio>
 	<audio src="public/sound/sound(17).mp3" data-key="81"></audio>
 	<audio src="public/sound/sound(18).mp3" data-key="82"></audio>
